# rmbot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: deploy-dev.yml
docs/deployment/: GITHUB-SECRETS.md
frontend/: .env.example  Dockerfile  README.md  index.html  miniapp.html  nginx.conf  package-lock.json  package.json  public-stats.html  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/i18n/: index.tsx  messages.ts
frontend/src/lib/: api.ts  auth.ts  inventory-search.ts  notify.ts
frontend/src/miniapp/: app.tsx  auth.ts  main.tsx  mobile-ticket-flow.tsx  telegram.ts
frontend/src/public-stats/: app.tsx  main.tsx  public-stats.css
src/: manage.py
src/api/: url_router.py
src/api/v1/: urls.py
src/apps/account/: admin.py  managers.py  models.py  services.py
src/apps/attendance/: admin.py  managers.py  models.py  services.py
src/apps/bike/: managers.py  models.py  services.py
src/apps/gamification/: admin.py  models.py  services.py  tasks.py
src/apps/inventory/: admin.py  managers.py  models.py  services.py  services_import_export.py
src/apps/payroll/: admin.py  managers.py  models.py  services.py
src/apps/rules/: admin.py  managers.py  models.py  services.py
src/apps/ticket/: admin.py  managers.py  models.py  services.py  services_analytics.py  services_sla.py  services_sla_escalation.py  services_stockout.py  services_technician_actions.py  services_work_session.py  services_workflow.py  tasks.py
src/bot/: config.py  main.py  permissions.py  runtime.py  url_router.py
src/bot/etc/: container.py  i18n.py  loader.py  translator.py
src/bot/middlewares/: __init__.py  auth.py  di.py  error.py  i18n.py
src/bot/routers/: __init__.py  fallback.py  start.py  technician_tickets.py  ticket_admin.py  ticket_admin_create.py  ticket_qc.py  (+1 more)
src/config/: __init__.py  celery.py
src/core/: admin.py  managers.py  models.py
src/docs/: DOCS_STYLE.md  README.md
src/scripts/: entrypoint.sh  healthcheck.sh
src/tests/: conftest.py
(+306 files in other folders)
